assets/sass/plugins/jetpack/_featured.scss
.featured-list {
  @include clearfix;
  font-size: 0;
  line-height: normal;
  list-style: none;
  margin: 0;
  overflow: auto;
  position: relative;
  white-space: nowrap;
}

.featured-list-item {
	display: inline-block;
  width: 100%;
}

.featured-arrow {
	bottom: 0;
	color: transparent;
	cursor: pointer;
	position: absolute;
	top: 0;
	width: $featured-content-arrow-size;
	z-index: $z-index-cover;

	@include max-width($width-medium) {
		display: none;
	}

	&.prev {
		left: 0;
	}

	&.next {
		right: 0;
	}

  .fa {
    @include rem(font-size, $featured-content-arrow-size);
    bottom: 0;
    color: $color-white;
    height: $featured-content-arrow-size;
    left: 0;
    line-height: $featured-content-arrow-size;
    margin: auto;
    position: absolute;
    text-align: center;
    top: 0;
    width: $featured-content-arrow-size;
  }
}

.unslider {
	position: relative;
}

.unslider-nav {
	bottom: 0;
	display: none;
	left: 0;
	position: absolute;
	right: 0;
	text-align: center;
	z-index: $z-index-cover;

	@include max-width($width-medium) {
		display: block;
	}

	ol {
		list-style: none;
		margin: 0;
	}

	li {
		border: 3px solid $color-white;
		border-radius: 50%;
		cursor: pointer;
		display: inline-block;
    height: 20px;
		margin: 20px;
		text-indent: -9999px;
    width: 20px;

		&.unslider-active {
			background-color: $color-white;
		}
	}
}

